[b]Version 0.5.62[/b] (not released yet):

(2007-11-10)
 * (Experimental) New floating control (it looks like the old one) by using the
   new floatingwidget. This time it has an embedded toolbar, so actions are 
   added to it (can't actions be added directly to widgets?). Previously every 
   button and widget had to be created individually (making connections and 
   so on), duplicating code. Now it's a lot easier.
 * Started to write the "mini gui". This is an optional gui, with very few
   buttons: it doesn't have a toolbar, and the control bar only have a 
   play/pause, stop and mute buttons, and the time slider. It also provides
   a floating control with less buttons.
   To enable it: smplayer -mini
   This gui is in fact intended to be an example on how to create alternative
   gui's for smplayer. 

(2007-11-09)
 * Added options in Preferences->Advanced to save automatically the mplayer
   log every time a new file is played. Intended for external applications.
   Most of the code developed by iSage.

(2007-11-07)
 * More work on the new code for time and volume sliders.

(2007-11-06)
 * (Experimental internal change) Created a wrapper for the time and volume
   slider using QWidgetAction. Until now whenever a time or volume slider were
   needed (there are 3 time sliders and 3 volume sliders) each widget had to
   be created, set its properties, make connections...  individually = a lot 
   of duplicated code. Now only one object has to be created (one for the time
   slider, another one for the volume slider) and then it can be inserted in 
   any widget that accepts QAction's, as many times as necessary. 
   Less code and easier.

(2007-11-05)
 * Removed option H.264->Skip frames, as it affects non H.264 videos too.
   The option in the config file is still available.
 * Added again the "Fast audio track switching" in Preferences->Performance,
   with a combo to select the 3 possible values: Auto, Yes and No.