@@ -1,5 +1,10 @@
 [b]Version 0.5.62[/b] (not released yet):
 
+(2007-11-12)
+ * (Fix) Now changing the volume when the file is paused really keeps
+   pause. This is done by not changing the volume immediately but
+   scheduling the volume change just after the file plays again.
+ 
 (2007-11-10)
  * (Experimental) New floating control (it looks like the old one) by using the
    new floatingwidget. This time it has an embedded toolbar, so actions are 
